// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details link empty render with no ID 1`] = `""`;

exports[`Details link renders dispute details with ID 1`] = `
<Link
  href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fdetails&id=dp_mock"
  type="wc-admin"
>
  <t
    icon="info-outline"
    size={18}
  />
</Link>
`;

exports[`Details link renders transaction details with charge ID 1`] = `
<Link
  href="admin.php?page=wc-admin&path=%2Fpayments%2Ftransactions%2Fdetails&id=ch_mock"
  type="wc-admin"
>
  <t
    icon="info-outline"
    size={18}
  />
</Link>
`;
